--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      /* UI-Tablett: Box-Innenbraun @ 10% */
-      --ui-panel-bg: rgba(122, 74, 52, 0.10);
+      /* UI-Tablett: dunkelbraun @ 6% */
+      --ui-panel-bg: rgba(122, 74, 52, 0.06);
       --ui-panel-border: rgba(0,0,0,0.35);
 
       --ui-text: #ead7be; /* hellbeige */
+
+      /* Slot-Zahlen (als Variable, damit wir exakt denselben Stil woanders nutzen) */
+      --slot-num-size: clamp(18px, 8vmin, 36px);
+      --slot-num-weight: 900;
+      --slot-num-color: #111;
+      --slot-num-shadow: 0 1px 0 rgba(255,255,255,0.35);
 
       --rotSign: 1;
       --rot: 0deg;
@@ -293,10 +299,10 @@
       align-items:center;
       justify-content:center;
 
-      font-weight: 900;
-      color: #111;
-      font-size: clamp(18px, 8vmin, 36px);
-      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
+      font-weight: var(--slot-num-weight);
+      color: var(--slot-num-color);
+      font-size: var(--slot-num-size);
+      text-shadow: var(--slot-num-shadow);
 
       transform: rotate(var(--num-rot, 0deg)) translate(var(--opt-x, 0px), var(--opt-y, 0px));
       transform-origin: 50% 50%;
@@ -445,16 +451,19 @@
     .uiRow{
       display:flex;
       align-items:center;
-      justify-content: space-between;
+      justify-content: flex-start;  /* statt space-between */
       gap: 10px;
     }
 
+    /* Kippziel doppelt so groß */
     .uiLabel{
       font-weight: 900;
       letter-spacing: 0.04em;
       color: var(--ui-text);
       user-select:none;
       text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+      font-size: clamp(22px, 5.2vmin, 36px);
+      line-height: 1;
     }
 
     .mini{
@@ -469,25 +478,48 @@
       display:flex;
       align-items:center;
       gap: 10px;
-      margin-left: auto;
+      margin-left: 0; /* NICHT mehr nach rechts schieben */
     }
 
+    /* blaues Quadrat näher zu "Kippziel", scharfe Ecken + beiger Innenrahmen */
     .targetSquare{
       width: 44px;
       height: 44px;
-      border-radius: 10px;
+      border-radius: 0px; /* scharf */
       background: var(--blau);
       border: 2px solid rgba(0,0,0,0.55);
+
+      /* beiger Innenrahmen 2px */
       box-shadow:
+        inset 0 0 0 2px var(--btn-bg),
         0 6px 12px rgba(0,0,0,0.18),
         0 0 0 1px rgba(255,255,255,0.18) inset;
+
       display:flex;
       align-items:center;
       justify-content:center;
-      font-weight: 1000;
-      font-size: 22px;
-      color: #0b0b0b;
-      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
+
+      /* Zahl exakt wie Slotzahlen */
+      font-weight: var(--slot-num-weight);
+      font-size: var(--slot-num-size);
+      color: var(--slot-num-color);
+      text-shadow: var(--slot-num-shadow);
+
+      user-select:none;
+      line-height: 1;
+    }
+
+    /* rechtsbündige Anzeige "0P" (fixe Breite, nix springt bei 66) */
+    .kippP{
+      margin-left: auto;              /* ganz nach rechts */
+      text-align: right;
+      color: var(--ui-text);
+      font-weight: var(--slot-num-weight);
+      font-size: var(--slot-num-size);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+      font-variant-numeric: tabular-nums;
+      min-width: 4ch;                 /* Platz für "66P" */
+      line-height: 1;
       user-select:none;
     }
 
@@ -506,6 +538,16 @@
       letter-spacing: 0.04em;
       color: var(--ui-text);
       text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+    }
+
+    /* Punkte-Zahl wie Slotzahlen */
+    #scoreVal{
+      font-weight: var(--slot-num-weight);
+      font-size: var(--slot-num-size);
+      color: var(--ui-text);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+      font-variant-numeric: tabular-nums;
+      line-height: 1;
     }
 
     .scoreRight{
@@ -535,7 +577,7 @@
       width:100%;
       height:100%;
       fill: none;
-      stroke: var(--ui-text); /* Linien hellbeige */
+      stroke: var(--ui-text);
       stroke-width: 2.2;
       stroke-linecap: round;
       stroke-linejoin: round;
@@ -548,7 +590,7 @@
       width: 100%;
       height: 10px;
       border-radius: 999px;
-      background: rgba(0,0,0,0.18); /* Slot bleibt wie gehabt */
+      background: rgba(0,0,0,0.18);
       outline: none;
       border: 1px solid rgba(0,0,0,0.25);
       box-shadow: 0 0 0 1px rgba(255,255,255,0.18) inset;
@@ -559,7 +601,7 @@
       width: 22px;
       height: 22px;
       border-radius: 6px;
-      background: var(--btn-bg); /* Knopf beige */
+      background: var(--btn-bg);
       border: 2px solid rgba(0,0,0,0.35);
       box-shadow:
         0 8px 14px rgba(0,0,0,0.22),
@@ -570,7 +612,7 @@
       width: 22px;
       height: 22px;
       border-radius: 6px;
-      background: var(--btn-bg); /* Knopf beige */
+      background: var(--btn-bg);
       border: 2px solid rgba(0,0,0,0.35);
       cursor: pointer;
     }
@@ -597,7 +639,7 @@
       filter: brightness(0.97);
     }
 
-    /* ========= DEV Controls (lassen wir fürs Testen da) ========= */
+    /* ========= DEV Controls ========= */
     .controls{
       width: 100%;
       display:flex;
@@ -708,12 +750,15 @@
         </div>
       </div>
 
-      <!-- Kippziel -->
+      <!-- Kippziel (Label groß, Quadrat nah dran, rechts 0P) -->
       <div class="uiRow">
         <div class="uiLabel">Kippziel</div>
+
         <div class="targetCard">
           <div id="targetSquare" class="targetSquare" aria-label="Ziel (Dummy)">7</div>
         </div>
+
+        <div id="kippP" class="kippP" aria-label="Kippziel P (Dummy)">0P</div>
       </div>
 
       <!-- Punkte / Progress / Highscore -->
@@ -729,7 +774,7 @@
       <button id="btnStart" class="startBtn">START</button>
     </div>
 
-    <!-- ===== DEV Controls (für dich weiterhin zum Testen) ===== -->
+    <!-- ===== DEV Controls ===== -->
     <div class="controls">
       <button id="btnMix" class="btn">Würfel mischen (12)</button>
       <button id="btnKip50" class="btn">KIP 50% AN/AUS</button>
